<resources>
    <string name="app_name">tp2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TP2</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_internetstatut">Statut Internet</string>
    <string name="menu_about">À propos</string>
    <string name="menu_abacus">Abacus</string>
    <string name="menu_form">Formulaire</string>
    <string name="menu_myprofile">Mon profil</string>

    <string name="about">Spicy jalapeno bacon ipsum dolor amet pork chop doner sausage chicken porchetta tri-tip rump. Short ribs tenderloin pancetta, spare ribs turducken burgdoggen pork belly filet mignon ribeye ball tip sausage tongue fatback beef ribs ham hock. Picanha sausage kielbasa tri-tip frankfurter porchetta fatback beef ribs pancetta jowl chuck filet mignon pork belly pig. Jowl boudin swine pork alcatra ham. Ball tip pork belly prosciutto fatback. Pork chop pig landjaeger turducken, tenderloin picanha beef ribs flank swine. Pastrami fatback porchetta kevin cupim, shankle shank ball tip tenderloin prosciutto ham hock short loin. Ham pastrami porchetta frankfurter boudin salami. Capicola cupim flank meatball shank bacon ham hock pastrami sausage prosciutto pork chop short ribs porchetta pig tri-tip. Prosciutto cupim t-bone shoulder, corned beef rump capicola sausage jerky pork loin pig. Bacon leberkas chuck pork loin ham pastrami. Flank biltong filet mignon bacon.Landjaeger biltong sirloin leberkas flank ribeye. Doner ham tenderloin kielbasa cupim tongue. Short loin tail fatback prosciutto chicken, pork belly pastrami shankle filet mignon t-bone flank turkey pancetta. Bresaola jerky prosciutto pancetta ball tip sausage meatloaf tenderloin t-bone porchetta pork chop rump tail doner fatback. Ribeye kielbasa biltong, drumstick shoulder pork leberkas beef ribs turducken spare ribs short loin picanha frankfurter brisket pork loin. Drumstick alcatra meatball, hamburger ham frankfurter ribeye strip steak leberkas pig landjaeger. Bacon ground round chicken kielbasa biltong fatback pork chop. Beef ribs fatback chicken chuck. Cow meatloaf short loin landjaeger prosciutto frankfurter ball tip. Cupim tenderloin pig ribeye shank. Pig ball tip cow kevin beef bacon. Pig leberkas strip steak, shank pork pastrami chicken jerky tenderloin meatloaf. Pancetta pork loin salami biltong beef fatback capicola sausage kevin drumstick picanha shank beef ribs brisket doner. Landjaeger alcatra andouille burgdoggen kevin, pig kielbasa ground round tri-tip doner beef ribs capicola. Brisket ball tip spare ribs, landjaeger pork boudin filet mignon sirloin sausage frankfurter tri-tip picanha cow venison. Ground round corned beef sausage t-bone biltong beef ribs landjaeger drumstick. Brisket chuck t-bone jerky turducken chicken. Jerky alcatra beef ribs turducken frankfurter swine landjaeger picanha pork chop pork loin. Jerky capicola ball tip sausage porchetta. Frankfurter pancetta beef ribs prosciutto tenderloin burgdoggen alcatra cow bresaola kevin. Long enough eh! THE END 5x!</string>
</resources>
