<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_internetstatut"
            android:icon="@drawable/ic_internetstatut"
            android:title="@string/menu_internetstatut" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_abacus"
            android:icon="@drawable/ic_abacus"
            android:title="@string/menu_abacus" />
    </group>

    <item android:title="Gestion utilisateur">
        <menu>
            <item
                android:id="@+id/nav_form"
                android:icon="@drawable/ic_form"
                android:title="@string/menu_form" />
            <item
                android:id="@+id/nav_myprofile"
                android:icon="@drawable/ic_myprofile"
                android:title="@string/menu_myprofile" />
        </menu>
    </item>

</menu>
